# decorator

./: decor_my_func.py  decorator_path.py  decoratorlogs.txt  main.py  pyproject.toml
